<resources>
    <string name="app_name">ITrack</string>
    <string name="title_activity_maps">Map</string>
    <string name="permission_denied_explanation">
        Permission was denied, but is needed for core functionality.
    </string>
    <string name="settings">Settings</string>
    <string name="bottom_sheet_latitude">Latitude</string>
    <string name="bottom_sheet_longitude">Longitude</string>
    <string name="bottom_sheet_accuracy">Accuracy</string>
    <string name="bottom_sheet_time_title">Timestamp</string>
    <string name="bottom_sheet_source_title">Source</string>
    <string name="bottom_sheet_title">Marker detail</string>
    <string name="graph_acc_menu_text">Accuracy Graph</string>
    <string name="stats_menu_text">Statistics</string>
    <string name="settings_menu_text">Settings</string>
    <string name="map_menu_text">Map</string>
    <string name="drawer_header_sub_title">Tracker</string>
    <string name="drawer_header_title">Menu</string>
    <string name="distance_title">Distance</string>
    <string name="max_title">Max</string>
    <string name="min_title">Min</string>
    <string name="average_title">Avg</string>
    <string name="speed_title">Speed</string>
    <string name="total_title">Total</string>
    <string name="confirm">Add</string>
    <string name="cancel">Cancel</string>
    <string name="setting_color_subtitle_text">Select line color</string>
    <string name="setting_color_title_text">Color</string>
    <string name="setting_linesize_title_text">Size</string>
    <string name="setting_linesize_subtitle_text">Select line width</string>
    <string name="insufficient_setting_message">Insufficient setting permission. Fix in Settings.</string>
    <string name="setting_sample_interval_title_text">Sampling</string>
    <string name="setting_sample_interval_subtitle_text">Select sample interval</string>
    <string name="color_picker_dialog_tile">ColorPicker Dialog</string>
    <string name="alt_title">Altitude</string>
    <string name="graph_title">GPS Accuracy Graph</string>
    <string name="marker_title">Marker</string>
    <string-array name="line_size_dropdown_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>
