<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:layout_insetEdge="bottom">

    <LinearLayout
        android:id="@+id/marker_detail_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_bottom_sheet"
            style="@style/titleText_bottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bottom_sheet_title"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bottom_sheet_lat_title"
            style="@style/bottomSheetTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bottom_sheet_latitude"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bottom_sheet_lat_value"
            style="@style/bottomSheetText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="34.32" />

        <TextView
            android:id="@+id/bottom_sheet_long_title"
            style="@style/bottomSheetTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bottom_sheet_longitude"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bottom_sheet_long_value"
            style="@style/bottomSheetText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="34.32" />

        <TextView
            android:id="@+id/bottom_sheet_accuracy_title"
            style="@style/bottomSheetTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bottom_sheet_accuracy"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bottom_sheet_accuracy_value"
            style="@style/bottomSheetText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="12" />

        <TextView
            android:id="@+id/bottom_sheet_time_title"
            style="@style/bottomSheetTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bottom_sheet_time_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bottom_sheet_time_value"
            style="@style/bottomSheetText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="12:34:31" />

        <TextView
            android:id="@+id/bottom_sheet_source_title"
            style="@style/bottomSheetTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bottom_sheet_source_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bottom_sheet_source_value"
            style="@style/bottomSheetText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="GPS" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/actions_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/north_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="North"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/east_button"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/east_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="East"
            app:layout_constraintLeft_toRightOf="@+id/north_btn"
            app:layout_constraintRight_toLeftOf="@+id/south_button"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/south_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="South"
            app:layout_constraintLeft_toRightOf="@+id/east_button"
            app:layout_constraintRight_toLeftOf="@+id/west_button"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/west_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="West"
            app:layout_constraintLeft_toRightOf="@id/south_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>