<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mtrl_card_spacing"
            android:layout_marginTop="@dimen/mtrl_card_spacing"
            android:layout_marginRight="@dimen/mtrl_card_spacing"
            android:background="?attr/selectableItemBackground"
            android:foreground="?attr/selectableItemBackground"
            android:minHeight="100dp"
            card_view:cardCornerRadius="@dimen/card_recycler_corner_radius"
            card_view:cardElevation="@dimen/card_recycler_elevation">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/speed_title"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="center"
                    android:text="@string/speed_title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="50sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/speed_avg_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/non_title_start_margin"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/average_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/speed_avg_value"
                    app:layout_constraintTop_toBottomOf="@id/speed_title" />

                <TextView
                    android:id="@+id/speed_avg_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="4dp"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@+id/speed_avg_title"
                    app:layout_constraintRight_toLeftOf="@+id/speed_max_title"
                    app:layout_constraintTop_toBottomOf="@id/speed_title"
                    tools:text="43km" />

                <TextView
                    android:id="@+id/speed_max_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="@dimen/non_title_start_margin"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/max_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toRightOf="@id/speed_avg_value"
                    app:layout_constraintRight_toLeftOf="@+id/speed_max_value"
                    app:layout_constraintTop_toBottomOf="@id/speed_title" />

                <TextView
                    android:id="@+id/speed_max_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:paddingLeft="4dp"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@+id/speed_max_title"
                    app:layout_constraintRight_toLeftOf="@+id/speed_min_title"
                    app:layout_constraintTop_toBottomOf="@id/speed_title"
                    tools:text="100km" />

                <TextView
                    android:id="@+id/speed_min_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="@dimen/non_title_start_margin"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/min_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toRightOf="@id/speed_max_value"
                    app:layout_constraintRight_toLeftOf="@+id/speed_min_value"
                    app:layout_constraintTop_toBottomOf="@id/speed_title" />

                <TextView
                    android:id="@+id/speed_min_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:paddingLeft="4dp"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@+id/speed_min_title"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/speed_title"
                    tools:text="100km" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mtrl_card_spacing"
            android:layout_marginTop="@dimen/mtrl_card_spacing"
            android:layout_marginRight="@dimen/mtrl_card_spacing"
            android:background="?attr/selectableItemBackground"
            android:foreground="?attr/selectableItemBackground"
            android:minHeight="100dp"
            card_view:cardCornerRadius="@dimen/card_recycler_corner_radius"
            card_view:cardElevation="@dimen/card_recycler_elevation">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/distance_title"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="center"
                    android:text="@string/distance_title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="50sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/distance_total_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/non_title_start_margin"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/total_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/distance_total_value"
                    app:layout_constraintTop_toBottomOf="@id/distance_title" />

                <TextView
                    android:id="@+id/distance_total_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="4dp"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@+id/distance_total_title"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/distance_title"
                    tools:text="43km" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mtrl_card_spacing"
            android:layout_marginTop="@dimen/mtrl_card_spacing"
            android:layout_marginRight="@dimen/mtrl_card_spacing"
            android:background="?attr/selectableItemBackground"
            android:foreground="?attr/selectableItemBackground"
            android:minHeight="100dp"
            app:layout_constraintTop_toTopOf="parent"
            card_view:cardCornerRadius="@dimen/card_recycler_corner_radius"
            card_view:cardElevation="@dimen/card_recycler_elevation">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/alt_title"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="center"
                    android:text="@string/alt_title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="50sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/alt_avg_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/non_title_start_margin"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/average_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/alt_avg_value"
                    app:layout_constraintTop_toBottomOf="@id/alt_title" />

                <TextView
                    android:id="@+id/alt_avg_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="4dp"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@+id/alt_avg_title"
                    app:layout_constraintRight_toLeftOf="@+id/alt_max_title"
                    app:layout_constraintTop_toBottomOf="@id/alt_title"
                    tools:text="43km" />

                <TextView
                    android:id="@+id/alt_max_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="@dimen/non_title_start_margin"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/max_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toRightOf="@id/alt_avg_value"
                    app:layout_constraintRight_toLeftOf="@+id/alt_max_value"
                    app:layout_constraintTop_toBottomOf="@id/alt_title" />

                <TextView
                    android:id="@+id/alt_max_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:paddingLeft="4dp"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@+id/alt_max_title"
                    app:layout_constraintRight_toLeftOf="@+id/alt_min_title"
                    app:layout_constraintTop_toBottomOf="@id/alt_title"
                    tools:text="100km" />

                <TextView
                    android:id="@+id/alt_min_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="@dimen/non_title_start_margin"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/min_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toRightOf="@id/alt_max_value"
                    app:layout_constraintRight_toLeftOf="@+id/alt_min_value"
                    app:layout_constraintTop_toBottomOf="@id/alt_title" />

                <TextView
                    android:id="@+id/alt_min_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:paddingLeft="4dp"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@+id/alt_min_title"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/alt_title"
                    tools:text="100km" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>